test/fixtures/syntaxerrors/i.lys.ast.desugar
|-Document(0,18)
  |-(AstCons)
    |-FunctionDirective(0,18)
      |-(AstCons)
        |-Decorators(0,0)
          <Rule0>
        |-(AstCons)
          |-PrivateModifier(0,8)
            <Rule0>
          |-FunDeclaration(8,18)
            |-(AstCons)
              |-<SyntaxError>=A function name was expected
              |-(AstCons)
                |-TypeParameters(12,12)
                  <Rule0>
                |-(AstCons)
                  |-FunctionParamsList(12,14)
                    |-(List)(13,13)
                      <Rule0>
                  |-(AstCons)
                    |-ReturnType(15,15)
                      <Rule0>
                    |-FunctionBody(15,18)
                      |-NumberLiteral=1
    |-EndOfFile=